spring-scheduler and java-config-style module added in the pocs

--- a/spring-based-poc/pom.xml
+++ b/spring-based-poc/pom.xml
@@ -18,8 +18,10 @@
   </properties>
   
   	<modules>  
-		<module>spring-solr-tuto</module>
-		<module>spring-mvc-tuto</module>
+<!--	<module>spring-solr-tuto</module>
+		<module>spring-mvc-tuto</module> -->
+		<module>spring-mvc-tuto-java-config-style</module>
+		<module>spring-mvc-scheduler-tuto</module>
 	</modules>
   
   <dependencies>
